k8s/ecommerce-product-service-database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: product-db-sts
  namespace: ecommerce
spec:
  serviceName: product-db-service
  replicas: 1
  selector: 
    matchLabels:
      # only pods labeled with app: product-db belong to this STS
      app: product-db
  template:
    metadata:
      labels:
        # pods created by this STS will have the label app: product-db,
        # ensuring they're managed by the STS and
        # that the Service (below) can target them
        app: product-db
    spec:
      containers:
        - name: product-db-container
          image: postgres:latest
          volumeMounts:
            - name: product-pvc
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: product-pvc
      spec:
        selector:
          matchLabels:
            storage: product-pv-label
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: product-db-service
  namespace: ecommerce
spec:
  clusterIP: None
  selector:
    # the Service will route traffic to pods labeled with app: product-db,
    # which are the ones produced by the STS
    app: product-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
